--- a/gestion_libros/src/main/resources/application.properties
+++ b/gestion_libros/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-spring.application.name=actividad
+spring.datasource.url=jdbc:mysql://localhost:3307/gestion_libro
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
